# structured-agents

./: .gitignore  .tmuxp.yaml  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW.md  CODE_REVIEW_v2.md  DEPENDENCY_ISSUES.md  DEV_GUIDE.md  FINAL_REVIEW.md  FINAL_REVIEW_REFACTORING_LIST.md  GRAMMAR_CREATION_GUIDE.md  GRAMMAR_INTEGRATION_REPORT.md  HOW_TO_USE_QWEN_MODEL.md  QWEN_INTEGRATION_PLAN.md  QWEN_STRUCTURED_AGENTS_INTEGRATION.md  README.md  REFACTORING_PLAN.md  REVIEW_REVIEW.md  STRUCTURAL_TAG_VLLM_ERROR.md  STRUCTURED_AGENTS_DEV_GUIDE.md  STRUCTURED_AGENTS_FUNCTIONALITY_REFACTOR.md  TESTING_GUIDE.md  V031_REFACTORING_GUIDE.md  V031_REFACTORING_PLAN.md  V033_GRAMMAR_REFACTORING_GUIDE.md  V2_REFACTOR.md  VLLM_TOOL_CALLING_DIAGNOSIS.md  WORKSPACE_DEMO_REVIEW.md  XGRAMMAR_INTEGRATION_REVIEW.md  demo_v03.py  pyproject.toml  v03_GROUND_UP_REFACTOR_IDEAS.md
.analysis/: config_analysis.md  config_review.md  docs_demo_analysis.md  fixes_verification.md  source_analysis.md  source_review.md  subsystems_analysis.md  test_analysis.md  test_config_analysis.md  test_review.md
.context/: CUSTOM_XGRAMMAR_GUIDE.md  FUNCTIONGEMMA_DOCS.md  FUNCTIONGEMMA_PROMPT_TIPS.md  HOW_TO_CREATE_AN_AGENT.md  HOW_TO_CREATE_A_GRAIL_PYM_SCRIPT.md  SERVER_LOG_GUIDE.md  SERVER_SETUP.md  STRUCTURAL_TAG_INTEGRATION_EXPLORATION.md  STRUCTURED_AGENTS_DEV_GUIDE.md
.refactor/: V031_DEVELOPER_GUIDE-STEP_1.md  V031_DEVELOPER_GUIDE-STEP_1_rev1.md  V031_DEVELOPER_GUIDE-STEP_2.md  V031_DEVELOPER_GUIDE-STEP_2_rev1.md  V031_DEVELOPER_GUIDE-STEP_3.md  V031_DEVELOPER_GUIDE-STEP_3_rev1.md  V031_DEVELOPER_GUIDE-STEP_4.md  V031_DEVELOPER_GUIDE-STEP_4_rev1.md  V031_DEVELOPER_GUIDE-STEP_5.md  V031_DEVELOPER_GUIDE-STEP_5_rev1.md  V031_DEVELOPER_GUIDE-STEP_6.md  V031_DEVELOPER_GUIDE-STEP_6_rev1.md  (+2 more)
(+253 files in other folders)
