[project]
name = "structured-agents"
version = "0.1.0"
description = "Structured tool orchestration with grammar-constrained LLM outputs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "openai>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "grail",
    "fsdantic",
    "xgrammar>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.uv.sources]
fsdantic = { git = "https://github.com/Bullish-Design/fsdantic.git" }
grail = { git = "https://github.com/Bullish-Design/grail.git" }
#cairn = { git = "https://github.com/Bullish-Design/cairn.git" }



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_agents"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
